# geo-api

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: database.rs  db.js  index.js  json.rs  main.rs  setup.sql  wiki_data_line.rs  wiki_sparql.rs  wiki_time.rs  wikidata-db-stream.js  wikidata-sparql.js  wikidata-stream.js  wikidata-time.js
src/input/: compression.rs  file.rs  http.rs  mod.rs
src/post/: city_countries.sql  city_labels.sql  city_labels_by_country.sql  esperanto_city_labels.sql  esperanto_subdivision_labels.sql  find_subdivision.sql  mod.rs  per_city.sql  per_subdivision.sql  subdivision_iso.sql  subdivision_labels.sql  subdivision_labels_by_country.sql
src/post/cleanup/: 01.sql  02.sql  03.sql  04.sql  05.sql  06.sql  07.sql  08.sql  09.sql
