[package]
name = "geo-db"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4"
fern = "0.6"
thiserror = "1.0"
ctrlc = "3.2"

rayon-core = "1.9"
crossbeam = "0.8"
rusqlite = { version = "0.25", features = ["bundled"] }

reqwest = { version = "0.11", features = ["blocking", "json"] }
bzip2 = "0.4"
bzip2-rs = { git = "https://github.com/paolobarbolini/bzip2-rs", rev = "5c31f26", features = ["rayon"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
